# Project_1

./: main.py  pyproject.toml  user_settings.json
data/: json_info_events.json  json_info_main.json  ssss.json
src/: utils.py  views.py
tests/: conftest.py  operations_test.xlsx  test_utils.py  test_views.py
